--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
         <script type="text/javascript" src="http://leaflet.cloudmade.com/dist/leaflet.js"></script>
         <script type="text/javascript" src="js/vendor/tile.stamen.js"></script>
         <link rel="stylesheet" href="css/map.css" />
-        <script type="text/javascript" src="js/vendor/colorbrewer.js"></script>
+        <script type="text/javascript" src="js/vendor/chroma.min.js"></script>
         <script type="text/javascript" src="js/vendor/underscore.min.js"></script>
         <script type="text/javascript" src="js/vendor/jquery.min.js"></script>
     </head>
