--- a/html/frame.html
+++ b/html/frame.html
@@ -22,25 +22,24 @@
             <div class="station-info station-trips"><%= commafy(trips_total) %> total trips</div>
         </script>
 
+        <!-- station list item -->
+        <script type="text/template" class="tmpl station-item">
+            <div class="station-group-station">
+                <span class="station-percent">
+                    <%= percentify(station.fpct_total, 0) %>%
+                </span>
+                <%= station.name %>
+            </div>
+        </script>
+
         <!-- top stations -->
-        <script type="text/template" class="tmpl station-list">
-            <% _.map(groups, function (g) { %>
-                <div class="station-group">
-                    <div class="station-group-name">
-                        <%= g.name %> Stations
-                    </div>
-                    <div class="station-group-stations">
-                    <% _.each(g.stations, function (s) { %>
-                        <div class="station-group-station">
-                            <span class="station-percent">
-                                <%= percentify(s.fpct_total, 0) %>%
-                            </span>
-                            <%= s.name %>
-                        </div>
-                    <% }) %>
-                    </div>
+        <script type="text/template" class="tmpl station-group">
+            <div class="station-group">
+                <div class="station-group-name">
+                    <%= group.name %> Stations
                 </div>
-            <% }) %>
+                <div class="station-group-stations"></div>
+            </div>
         </script>
 
         <script src="js/map.js"></script>
