--- a/html/multimap.html
+++ b/html/multimap.html
@@ -13,36 +13,13 @@
         <script type="text/javascript" src="js/vendor/jquery.min.js"></script>
     </head>
     <body>
-        <div class="iframed-map-holder"></div>
-
-        <!-- info div -->
+        <div class="maps"></div>
         <script type="text/template" class="tmpl station">
             <div class="station-info station-name"><%= name %></div>
-            <div class="station-info"><span class="station-pct"><%= percentify(fpct_total, 0) %>%</span> female ridership</div>
+            <div class="station-info"><span class="station-pct"><%= Math.round(fpct_total * 1000) / 10 %>%</span> female ridership</div>
             <div class="station-info station-trips"><%= commafy(trips_total) %> total trips</div>
         </script>
-
-        <!-- station list item -->
-        <script type="text/template" class="tmpl station-item">
-            <div class="station-group-station">
-                <span class="station-percent">
-                    <%= percentify(station.fpct_total, 0) %>%
-                </span>
-                <%= station.name %>
-            </div>
-        </script>
-
-        <!-- top stations -->
-        <script type="text/template" class="tmpl station-group">
-            <div class="station-group">
-                <div class="station-group-name">
-                    <%= group.name %> Stations
-                </div>
-                <div class="station-group-stations"></div>
-            </div>
-        </script>
-
         <script src="js/map.js"></script>
-        <script src="js/frame.js"></script>
+        <script src="js/multimap.js"></script>
     </body>
 </html>
