Limit top stations to 1,000+ trips

--- a/html/index.html
+++ b/html/index.html
@@ -38,7 +38,7 @@
         <script type="text/template" class="tmpl station-group">
             <div class="station-group">
                 <div class="station-group-name">
-                    <%= group.name %> Stations
+                    <%= group.name %> Stations <span class="weak">(with at least 1,000 trips)</span>
                 </div>
                 <div class="station-group-stations"></div>
             </div>
