Asset-ize and add s3 targets to Makefile

--- a/html/index.html
+++ b/html/index.html
@@ -6,11 +6,11 @@
         <!--[if lte IE 8]><link rel="stylesheet" href="http://leaflet.cloudmade.com/dist/leaflet.ie.css" /><![endif]-->
 
         <script type="text/javascript" src="http://leaflet.cloudmade.com/dist/leaflet.js"></script>
-        <script type="text/javascript" src="js/vendor/tile.stamen.js"></script>
+        <script type="text/javascript" src="/assets/js/tile.stamen-1.2.4.min.js"></script>
+        <script type="text/javascript" src="/assets/js/chroma-0.5.6.min.js"></script>
+        <script type="text/javascript" src="/assets/js/underscore-1.6.0.min.js"></script>
+        <script type="text/javascript" src="/assets/js/jquery-1.11.1.min.js"></script>
         <link rel="stylesheet" href="css/map.css" />
-        <script type="text/javascript" src="js/vendor/chroma.min.js"></script>
-        <script type="text/javascript" src="js/vendor/underscore.min.js"></script>
-        <script type="text/javascript" src="js/vendor/jquery.min.js"></script>
     </head>
     <body>
         <div class="iframed-map-holder"></div>
