--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,7 @@
         <script type="text/javascript" src="/assets/js/chroma-0.5.6.min.js"></script>
         <script type="text/javascript" src="/assets/js/underscore-1.6.0.min.js"></script>
         <script type="text/javascript" src="/assets/js/jquery-1.11.1.min.js"></script>
+        <script type="text/javascript" src="/assets/js/jquery.parse-2.0.8.min.js"></script>
         <link rel="stylesheet" href="css/map.css" />
     </head>
     <body>
