Use cdn.leafletjs.com stedda leaflet.cloudmade.com
Cloudmade is dead :(

--- a/html/index.html
+++ b/html/index.html
@@ -2,10 +2,9 @@
 <html>
     <head>
         <title>Bikeshare Map</title>
-        <link rel="stylesheet" href="http://leaflet.cloudmade.com/dist/leaflet.css" />
-        <!--[if lte IE 8]><link rel="stylesheet" href="http://leaflet.cloudmade.com/dist/leaflet.ie.css" /><![endif]-->
+        <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+        <script type="text/javascript" src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 
-        <script type="text/javascript" src="http://leaflet.cloudmade.com/dist/leaflet.js"></script>
         <script type="text/javascript" src="/assets/js/tile.stamen-1.2.4.min.js"></script>
         <script type="text/javascript" src="/assets/js/chroma-0.5.6.min.js"></script>
         <script type="text/javascript" src="/assets/js/underscore-1.6.0.min.js"></script>
