Make maps HTTPS-friendly.

--- a/html/index.html
+++ b/html/index.html
@@ -2,15 +2,15 @@
 <html>
     <head>
         <title>Bikeshare Map</title>
-        <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
-        <script type="text/javascript" src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+        <link rel="stylesheet" href="/assets/css/leaflet-0.7.3.css" />
+        <script type="text/javascript" src="/assets/js/leaflet-0.7.3.js"></script>
 
         <script type="text/javascript" src="/assets/js/tile.stamen-1.2.4.min.js"></script>
         <script type="text/javascript" src="/assets/js/chroma-0.5.6.min.js"></script>
         <script type="text/javascript" src="/assets/js/underscore-1.6.0.min.js"></script>
         <script type="text/javascript" src="/assets/js/jquery-1.11.1.min.js"></script>
         <script type="text/javascript" src="/assets/js/jquery.parse-2.0.8.min.js"></script>
-        <link rel="stylesheet" href="css/map.css" />
+        <link rel="stylesheet" href="css/map.css?v=3" />
     </head>
     <body>
         <div class="iframed-map-holder"></div>
